--- a/dex/index.html
+++ b/dex/index.html
@@ -1944,6 +1944,8 @@
         sel.value = tokens[0].token_contract;
         if (sel2) sel2.value = tokens[0].token_contract;
         window.availableTokens = tokens;
+        window.tokenByName = {}; window.tokenByContract = {};
+        tokens.forEach(t=>{ window.tokenByName[(t.token_name||'').toUpperCase()] = t; window.tokenByContract[(t.token_contract||'').toLowerCase()] = t; });
       } catch (e) { console.warn('Tokens fetch failed', e); }
     }
 
@@ -1993,15 +1995,31 @@
     initTabs();
 
     // Calculate CNGN amount in wei for airtime
-    function calcWeiFromNaira(naira) {
+    async function calcWeiFromNaira(naira) {
       try {
         const ngnInt = Math.floor(Number(naira || 0));
         if (!ngnInt || ngnInt <= 0) return '';
         const sel = document.getElementById('airtime-token');
-        const dec = sel ? Number(sel.selectedOptions[0]?.getAttribute('data-decimals') || 6) : 6;
-        const scale = '1' + '0'.repeat(dec);
-        const wei = ethers.BigNumber.from(ngnInt.toString()).mul(ethers.BigNumber.from(scale));
-        return wei.toString();
+        const selectedContract = sel?.value || '';
+        const selectedName = sel?.selectedOptions[0]?.text || '';
+        const cngn = (window.tokenByName && window.tokenByName['CNGN']) || { token_decimals: 6, token_contract: '0x7923C0f6FA3d1BA6EAFCAedAaD93e737Fd22FC4F' };
+        // Desired cNGN amount (wei)
+        const cngnWei = ethers.BigNumber.from(ngnInt.toString()).mul(ethers.BigNumber.from('1' + '0'.repeat(Number(cngn.token_decimals||6))));
+        // If selected token is CNGN, return cngnWei
+        if ((selectedName||'').toUpperCase() === 'CNGN' || selectedContract.toLowerCase() === (cngn.token_contract||'').toLowerCase()) {
+          return cngnWei.toString();
+        }
+        // Otherwise, fetch swap routes to convert cNGN -> selected token for amountIn=cngnWei
+        const tokenOut = selectedContract;
+        const tokenIn = cngn.token_contract;
+        const url = `https://liquidity-pool-api.assetchain.org/swaps/routes?tokenIn=${encodeURIComponent(tokenIn)}&tokenOut=${encodeURIComponent(tokenOut)}&amountIn=${cngnWei.toString()}&maxHops=2&includeAlternatives=true&slippageTolerance=1&includeLowLiquidityPools=true`;
+        try {
+          const resp = await fetch(url);
+          const data = await resp.json();
+          const routes = data.routes || [];
+          if (!routes.length || !routes[0].amountOut) return '';
+          return String(routes[0].amountOut);
+        } catch (_) { return ''; }
       } catch (e) {
         return '';
       }
@@ -2427,11 +2445,11 @@
     // Set up calculation buttons
     $('#airtime-calc').addEventListener('click', async () => {
       const ngn = parseFloat($('#airtime-amount').value || '0');
-      const wei = calcWeiFromNaira(ngn);
+      const wei = await calcWeiFromNaira(ngn);
       $('#airtime-nano').value = wei;
       $('#airtime-send').disabled = !wei;
       if (!wei) {
-        showStatus($('#airtime-status'), 'Failed to calculate amount in wei', false);
+        showStatus($('#airtime-status'), 'Failed to calculate token amount (swap or token unavailable)', false);
       }
     });
 
@@ -2441,11 +2459,11 @@
       const res = await fetch(`${apiBase}/access.php?action=checkDataPlanPrice&network=${encodeURIComponent(network)}&plan=${encodeURIComponent(plan)}`);
       const data = await res.json();
       const ngn = Number(data.amount || data.price || data.naira || 0);
-      const wei = ngn ? calcWeiFromNaira(ngn) : '';
+      const wei = ngn ? await calcWeiFromNaira(ngn) : '';
       $('#data-nano').value = wei;
       $('#data-send').disabled = !wei;
       if (!wei) {
-        showStatus($('#data-status'), 'Failed to calculate amount in wei', false);
+        showStatus($('#data-status'), 'Failed to calculate token amount (swap or token unavailable)', false);
       }
     });
 
@@ -2604,7 +2622,7 @@
         const erc20 = getErc20Contract(tokenContract, signer);
         const balance = await erc20.balanceOf(userAddress);
         if (balance.lt(amountWeiBN)) {
-          showStatus(statusEl, 'Insufficient CNGN balance for this transfer.', false);
+          showStatus(statusEl, 'Insufficient token balance for this transfer.', false);
           return;
         }
         showStatus(statusEl, 'Sending transaction...', true);
