--- a/dex/index.html
+++ b/dex/index.html
@@ -1109,7 +1109,7 @@
 
             <div class="form-group">
               <label for="airtime-amount">Amount (NGN)</label>
-              <input id="airtime-amount" type="number" min="50" step="10" placeholder="500" />
+              <input id="airtime-amount" type="number" min="50" step="10" placeholder="100" />
             </div>
 
             <div class="form-group">
@@ -1371,7 +1371,7 @@
         const backdrop = modal.querySelector('.alert-backdrop');
         if (backdrop) backdrop.onclick = () => { cleanup(); resolve(false); };
 
-        modal.style.display = 'block';
+        modal.style.display = 'inline-flex';
         modal.setAttribute('aria-hidden', 'false');
       });
     }
@@ -1828,7 +1828,7 @@
             hamburger.classList.toggle('active', open);
             mobileNav.setAttribute('style', open ? 'display: inline;' : 'display: none;');
             hamburger.setAttribute('aria-expanded', open ? 'true' : 'false');
-            hamburger.setAttribute('aria-label', open ? 'Close menu' : 'Open menu');
+            hamburger.setAttribute('aria-8888888888888888label', open ? 'Close menu' : 'Open menu');
           };
           hamburger.addEventListener('click', toggleMenu);
           hamburger.addEventListener('keydown', (ev) => {
@@ -2169,21 +2169,19 @@
         hash: item.txhash,
         from: item.senderaddress,
         to: item.targetaddress,
-        amountDisplay: `N${item.amount || '0.00'}`,
+        amountDisplay: item.token_name && item.token_name.toUpperCase() !== 'CNGN' ? `${item.amount || '0.00'} ${item.token_name}` : `N${item.amount || '0.00'}`,
         gasFee: 'Loading...',
         networkName: 'Assetchain Mainnet',
         chainId: chainIdHex,
         chainIdHex,
-        symbol: item.token_name || 'CNGN',
+        symbol: (item.token_name || 'TOKEN').toUpperCase(),
         decimals: 6,
         message: null
       };
-      const card = openReceiptModal(model);
+      openReceiptWindow(model);
       (async () => {
         const fee = item.txhash ? await fetchGasFee(item.txhash) : 'N/A';
-        if (card) {
-          const gasEl = card.querySelector('.kv-gas'); if (gasEl) gasEl.textContent = fee;
-        }
+        // Receipt window will include fee row populated on build; no DOM back-reference needed here
       })();
     }
     async function fetchWalletHistory(address, page = 0, perPage = 10) {
@@ -2422,24 +2420,82 @@
     }
 
     function openReceiptModal(model) {
-      const modal = document.getElementById('tx-modal');
-      const body = document.getElementById('tx-modal-body');
-      const title = document.getElementById('tx-modal-title');
-      if (!modal || !body || !title) return null;
-      title.textContent = 'Transaction Receipt';
-      body.innerHTML = '';
-      const card = createReceiptCard(model);
-      body.appendChild(card);
-      const closeBtn = document.getElementById('tx-modal-close');
-      const backdrop = modal.querySelector('.tx-backdrop');
-      const close = () => { modal.style.display = 'none'; modal.setAttribute('aria-hidden', 'true'); document.removeEventListener('keydown', onKey); };
-      const onKey = (ev) => { if (ev.key === 'Escape') close(); };
-      document.addEventListener('keydown', onKey);
-      if (closeBtn) closeBtn.onclick = close;
-      if (backdrop) backdrop.onclick = close;
-      modal.style.display = 'block';
-      modal.setAttribute('aria-hidden', 'false');
-      return card;
+      return null;
+    }
+
+    function openReceiptWindow(model) {
+      const status = String(model.status || '').toLowerCase();
+      const isSuccess = status === 'success'; const isFailed = status === 'failed';
+      const headerColor = isSuccess ? 'green' : (isFailed ? 'red' : 'yellow');
+      const iconClass = isSuccess ? 'fa-check' : (isFailed ? 'fa-times' : 'fa-hourglass-half');
+      const statusText = isSuccess ? 'Payment Successful' : (isFailed ? 'Payment Failed' : 'Payment Pending');
+      const tokenLabel = (model.symbol || 'TOKEN');
+      const amountLabel = model.amountDisplay || '';
+      const tokenContract = model.token_contract || '';
+      const sender = model.from || ''; const target = model.to || '';
+      const txhash = model.hash || '';
+      const dateStr = new Date(model.timestamp || Date.now()).toLocaleString();
+      const explorer = buildExplorerUrl('tx', model.chainIdHex || ASSETCHAIN_ID_HEX, txhash);
+
+      const w = window.open('', '_blank');
+      if (!w) { notify('error','Popup blocked. Allow popups to view receipt.'); return; }
+      w.document.write(`<!DOCTYPE html><html lang="en"><head>
+      <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Transaction Receipt</title>
+      <script src="https://cdn.tailwindcss.com"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+      <style>body{font-family:'Inter',sans-serif;background-color:#f3f4f6;background-image:radial-gradient(#e5e7eb 1px,transparent 1px);background-size:20px 20px;} .receipt-cutout{position:relative;} .receipt-cutout::after{content:"";position:absolute;bottom:-10px;left:0;right:0;height:20px;background-image:linear-gradient(135deg,transparent 50%,#ffffff 50%),linear-gradient(45deg,#ffffff 50%,transparent 50%);background-position:top;background-size:20px 20px;background-repeat:repeat-x;transform:rotate(180deg);} .hash-scroll::-webkit-scrollbar{height:4px;} .hash-scroll::-webkit-scrollbar-track{background:#f1f1f1;} .hash-scroll::-webkit-scrollbar-thumb{background:#d1d5db;border-radius:4px;} @media print{body{background:#fff;}} </style>
+      <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+      </head><body class="min-h-screen flex items-center justify-center p-4">
+      <div id="receipt" class="w-full max-w-md bg-white shadow-2xl rounded-3xl overflow-hidden relative border border-gray-100">
+        <div class="bg-${headerColor}-50 p-8 text-center border-b border-dashed border-gray-200 relative overflow-hidden">
+          <div class="absolute top-[-50px] left-[-50px] w-32 h-32 bg-${headerColor}-100 rounded-full opacity-50 blur-2xl"></div>
+          <div class="mx-auto w-20 h-20 bg-${headerColor}-100 rounded-full flex items-center justify-center mb-4 shadow-sm ring-4 ring-white relative z-10">
+            <i class="fas ${iconClass} text-3xl text-${headerColor}-500"></i>
+          </div>
+          <h1 class="text-2xl font-bold text-gray-800 tracking-tight">${statusText}</h1>
+          <p class="text-sm text-gray-500 mt-1 font-medium">${dateStr}</p>
+          <div class="mt-6"><span class="text-4xl font-extrabold text-gray-900 tracking-tighter">${amountLabel}</span> <span class="text-lg font-bold text-gray-500">${tokenLabel}</span></div>
+          <div class="inline-block mt-2 px-3 py-1 bg-white border border-gray-200 rounded-full text-xs font-semibold text-gray-600 shadow-sm">
+            <i class="fas fa-exchange-alt mr-1 text-blue-500"></i> DEX Transaction
+          </div>
+        </div>
+        <div class="p-6 space-y-6">
+          <div class="bg-gray-50 rounded-2xl p-4 border border-gray-100">
+            <div class="flex items-center space-x-3 mb-4 border-b border-gray-200 pb-3">
+              <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center"><i class="fas fa-mobile-alt text-red-500 text-sm"></i></div>
+              <h3 class="text-sm font-bold text-gray-800 uppercase tracking-wide">Service Details</h3>
+            </div>
+            <div class="space-y-3 text-sm">
+              <div class="flex justify-between items-start"><span class="text-gray-500">Service</span><span class="font-semibold text-gray-900 text-right">${(window.opener && window.opener._lastService)||'Purchase'}</span></div>
+              <div class="flex justify-between items-start"><span class="text-gray-500">Provider</span><span class="font-semibold text-gray-900 text-right">${(window.opener && window.opener._lastProvider)||''}</span></div>
+              <div class="flex justify-between items-start"><span class="text-gray-500">Recipient</span><span class="font-semibold text-gray-900 text-right">${(window.opener && window.opener._lastRecipient)||''}</span></div>
+              <div class="flex justify-between items-start"><span class="text-gray-500">Value Received</span><span class="font-bold text-${isSuccess?'green':'gray'}-600 text-right">₦${(window.opener && window.opener._lastValue)||''}</span></div>
+            </div>
+          </div>
+          <div>
+            <h3 class="text-xs font-bold text-gray-400 uppercase tracking-wider mb-3 ml-1 flex items-center"><i class="fas fa-link mr-2"></i> On-Chain Data</h3>
+            <div class="space-y-4">
+              <div class="flex justify-between items-center group"><div class="flex items-center space-x-3"><div class="w-8 h-8 rounded-lg bg-teal-50 flex items-center justify-center text-teal-600"><i class="fas fa-coins text-sm"></i></div><div class="flex flex-col"><span class="text-xs text-gray-500">Token</span><span class="text-sm font-medium text-gray-900">${tokenLabel}</span></div></div><div class="text-right"><span class="text-xs text-gray-400 font-mono block w-24 truncate">${(tokenContract||'').slice(0,6)}...${(tokenContract||'').slice(-4)}</span></div></div>
+              <div class="flex justify-between items-center group"><div class="flex items-center space-x-3"><div class="w-8 h-8 rounded-lg bg-blue-50 flex items-center justify-center text-blue-600"><i class="fas fa-wallet text-sm"></i></div><div class="flex flex-col"><span class="text-xs text-gray-500">Sender</span><span class="text-sm font-medium text-gray-900">${(sender||'').slice(0,6)}...${(sender||'').slice(-4)}</span></div></div></div>
+              <div class="flex justify-between items-center group"><div class="flex items-center space-x-3"><div class="w-8 h-8 rounded-lg bg-purple-50 flex items-center justify-center text-purple-600"><i class="fas fa-bullseye text-sm"></i></div><div class="flex flex-col"><span class="text-xs text-gray-500">Target</span><span class="text-sm font-medium text-gray-900">${(target||'').slice(0,6)}...${(target||'').slice(-4)}</span></div></div></div>
+              <div class="bg-gray-900 rounded-xl p-3 shadow-md">
+                <div class="flex justify-between items-center mb-1"><span class="text-xs text-gray-400">Transaction Hash</span><div class="flex items-center space-x-2"><span class="w-2 h-2 rounded-full ${isSuccess?'bg-green-500':(isFailed?'bg-red-500':'bg-yellow-500')} animate-pulse"></span><span class="text-xs ${isSuccess?'text-green-400':(isFailed?'text-red-400':'text-yellow-400')} font-medium">${isSuccess?'Confirmed':(isFailed?'Failed':'Pending')}</span></div></div>
+                <div class="flex items-center justify-between"><code class="text-xs text-gray-300 font-mono truncate w-56">${txhash||'N/A'}</code>
+                ${ explorer ? `<a href="${explorer}" target="_blank" class="text-gray-400 hover:text-white text-xs bg-gray-800 px-2 py-1 rounded">View</a>`: '' }</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="p-4 bg-gray-50 border-t border-gray-100 flex space-x-3">
+          <button id="btn-save" class="flex-1 py-3 rounded-xl bg-white border border-gray-200 text-gray-700 font-semibold shadow-sm hover:bg-gray-50 transition-all flex items-center justify-center gap-2"><i class="fas fa-image"></i> Save Image</button>
+          <button id="btn-print" class="flex-1 py-3 rounded-xl bg-gray-900 text-white font-semibold shadow-lg hover:bg-gray-800 transition-all flex items-center justify-center gap-2"><i class="fas fa-print"></i> Print</button>
+        </div>
+      </div>
+      <script>document.getElementById('btn-print').onclick=()=>window.print(); document.getElementById('btn-save').onclick=()=>{ html2canvas(document.getElementById('receipt')).then(canvas=>{ const a=document.createElement('a'); a.href=canvas.toDataURL('image/png'); a.download='receipt.png'; a.click(); }); };</script>
+      </body></html>`);
+      w.document.close();
     }
 
     function printReceipt(node) {
@@ -2473,6 +2529,7 @@
     $('#airtime-calc').addEventListener('click', async () => {
       const ngn = parseFloat($('#airtime-amount').value || '0');
       const wei = await calcWeiFromNaira(ngn);
+      window._lastNgn = ngn;
       $('#airtime-nano').value = wei;
       $('#airtime-send').disabled = !wei;
       if (!wei) {
@@ -2487,6 +2544,7 @@
       const data = await res.json();
       const ngn = Number(data.amount || data.price || data.naira || 0);
       const wei = ngn ? await calcWeiFromNairaBySelector('data-token', ngn) : '';
+      window._lastNgn = ngn;
       $('#data-nano').value = wei;
       $('#data-send').disabled = !wei;
       if (!wei) {
@@ -2678,12 +2736,13 @@
           amountWei: amountWeiBN.toString(),
           decimals: tokenDecimals,
           symbol: (tokenSel?.selectedOptions[0]?.text || '').toUpperCase(),
+          token_contract: tokenContract,
           gasFee: computeGasFee(receipt),
           networkName: 'Assetchain Mainnet',
           chainId: chainIdHex,
           chainIdHex
         };
-        const modalCard = openReceiptModal(model);
+        window._lastReceipt = model;
 
         const base = {
           target_address: target,
@@ -2715,31 +2774,31 @@
         const out = await verifyAndFulfil(service, payload);
         const isSuccess = (out.status === 'success') || (out.status === true) || (out.success === true);
 
-        showStatus(
-          statusEl,
-          out.msg || out.message || (isSuccess ? 'Transaction successful!' : 'Transaction failed'),
-          isSuccess
-        );
+        const msg = out.msg || out.message || (isSuccess ? 'Transaction successful!' : 'Transaction failed');
+        showStatus(statusEl, msg, isSuccess);
+        window._lastReceipt.status = isSuccess ? 'success' : 'failed';
+        window._lastReceipt.backendStatus = isSuccess ? 'VERIFIED' : 'VERIFICATION';
+        if (!isSuccess) { window._lastReceipt.message = msg; }
 
-        if (isSuccess) {
-          notify('success', 'Transaction successful!');
-          if (modalCard) {
-            const badge = modalCard.querySelector('.status-badge');
-            if (badge) { badge.textContent = 'SUCCESS • VERIFIED'; badge.classList.remove('status-failed'); badge.classList.add('status-success'); }
-          }
-        } else {
-          notify('error', 'Transaction failed.');
-          if (modalCard) {
-            const badge = modalCard.querySelector('.status-badge');
-            if (badge) { badge.textContent = 'FAILED • VERIFICATION'; badge.classList.remove('status-success'); badge.classList.add('status-failed'); }
-            const body = modalCard.querySelector('.receipt-body .receipt-grid');
-            if (body) {
-              const kvm = document.createElement('div'); kvm.className = 'kv';
-              const kk = document.createElement('div'); kk.className = 'k'; kk.textContent = 'Message';
-              const vv = document.createElement('div'); vv.className = 'v'; vv.textContent = out.msg || out.message || 'Unknown error';
-              kvm.appendChild(kk); kvm.appendChild(vv); body.appendChild(kvm);
+        const netSel = service === 'airtime' ? document.getElementById('airtime-network') : document.getElementById('data-network');
+        const phoneSel = service === 'airtime' ? document.getElementById('airtime-phone') : document.getElementById('data-phone');
+        window._lastService = service === 'airtime' ? 'Airtime Purchase' : 'Data Purchase';
+        window._lastProvider = netSel?.selectedOptions[0]?.text || '';
+        window._lastRecipient = phoneSel?.value || '';
+        window._lastValue = typeof window._lastNgn !== 'undefined' ? window._lastNgn : (service === 'airtime' ? (document.getElementById('airtime-amount')?.value || '') : '');
+
+        if (window.swal) {
+          swal({
+            title: isSuccess ? 'Transaction Successful' : 'Transaction Failed',
+            text: msg,
+            icon: isSuccess ? 'success' : 'error',
+            buttons: {
+              cancel: { text: 'Close', visible: true },
+              confirm: { text: 'View Receipt', visible: true }
             }
-          }
+          }).then(view => { if (view) { openReceiptWindow(window._lastReceipt); } });
+        } else {
+          notify(isSuccess ? 'success' : 'error', msg);
         }
 
         if (isSuccess) {
@@ -2755,22 +2814,18 @@
         try {
           const provider = window.currentProvider || window.ethereum;
           const chainIdHex = await getChainId(provider) || ASSETCHAIN_ID_HEX;
-          renderReceipt({
-            status: 'failed',
-            backendStatus: 'CLIENT',
-            timestamp: Date.now(),
-            hash: null,
+          const tokenSel = service === 'airtime' ? document.getElementById('airtime-token') : document.getElementById('data-token');
+          const m = {
+            status: 'failed', backendStatus: 'CLIENT', timestamp: Date.now(), hash: null,
             from: window.currentAddress || '',
             to: (service === 'airtime' ? $('#airtime-target').value : $('#data-target').value) || '',
             amountWei: (service === 'airtime' ? $('#airtime-nano').value : $('#data-nano').value) || '0',
-            decimals: 6,
-            symbol: 'CNGN',
-            gasFee: '—',
-            networkName: 'Assetchain Mainnet',
-            chainId: chainIdHex,
-            chainIdHex,
+            decimals: Number(tokenSel?.selectedOptions[0]?.getAttribute('data-decimals') || 6),
+            symbol: (tokenSel?.selectedOptions[0]?.text || 'TOKEN').toUpperCase(),
+            gasFee: '—', networkName: 'Assetchain Mainnet', chainId: chainIdHex, chainIdHex,
             message: e && e.message ? e.message : 'Unknown error'
-          });
+          };
+          if (window.swal) { swal({ title: 'Error', text: m.message, icon: 'error', buttons: ['Close', 'View Receipt'] }).then(view=>{ if(view) openReceiptWindow(m); }); }
         } catch (_) { }
         showAlert('Error', e && e.message ? e.message : 'Unknown error occurred.', { okText: 'OK' });
       }
